# VoiceChanged

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vance/vance_voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_vance_vance_voicechange_MainActivity.h  native-lib.cpp
app/src/main/java/com/vance/vance_voicechange/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vance/vance_voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
